# HyperCubeTree

./: Amr2UGrid.sh  AmrCellSize.h  AmrConnect.h  AmrLevels.h  AmrSidePoints.h  AmrTree.h  CMakeLists.txt  ConstBits.h  GridEnum.h  HyperCube.h  InterLevelPointConnect.h  Makefile  MeshInfo.h  Nbh.h  PathBits.h  PointConnect.h  PointIds.h  PointStatus.h  README.md  SidePointInsert.h  TestAmrLevels.cc  TestConstBits.cc  TestHyperCube.cc  TestNbh.cc  TestPointIds.cc  TestreadMesh.cc  Vec.h  readMesh.cpp  readMesh.h
amr2ugrid/: Amr2UGrid.sh  AmrConnect.cc  AmrConnect.h  AmrLevels.cc  AmrLevels.h  AmrSidePoints.cc  AmrSidePoints.h  AmrTree.cc  AmrTree.h  CMakeLists.txt  InterLevelPointConnect.h  MeshInfo.cc  MeshInfo.h  PointConnect.h  SidePointInsert.h
data/: deathstar.csg  deathstar3d_3levels.hct  deathstar3d_4levels.hct  levels_3x3x3_2x2x2.div  levels_8x8x8_3x3x3_x2.div  levels_8x8x8_3x3x3_x4.div
hydro/: CMakeLists.txt  main.cc
include/: AmrCellSize.h  AmrConnect.h  AmrLevels.h  AmrTree.h  CellVertexConnectivity.h  ConstBits.h  CubeEnum.h  GridDimension.h  GridEnum.h  HyperCube.h  HyperCubeNeighbor.h  HyperCubeTree.h  HyperCubeTreeCell.h  HyperCubeTreeCellPosition.h  Nbh.h  Vec.h  (+28 more)
tests/: CMakeLists.txt  HCTCellConnectivity.cc  HCTVertexOwnership.cc  TestAmrConnect.cc  TestAmrSidePoints.cc  TestAmrTree.cc  TestCSG.cc  TestCSGInput.cc  TestCellPosition.cc  TestConstBits.cc  TestCubeEnum.cc  TestGridEnum.cc  TestHCTCellVertexConnectivity.cc  TestHCTDualMesh.cc  TestHCTVertexOwnership.cc  TestHyperCube.cc  TestHyperCubeNeighbor.cc  TestHyperCubeTree.cc  TestHyperCubeTreeNbh.cc  TestMeshInfo.cc  TestNbh.cc  TestPathBits.cc  TestPointIds.cc  TestStaticSubdivisionScheme.cc  TestTreeCSGRefine.cc  TestTreeCSGValues.cc  TestTreeInput.cc  TestTreeLevelStorage.cc  TestVec.cc  TestVtkExport.cc  TestVtkExportDual.cc
(+4 files in other folders)
