include_directories(../include)

add_executable(TestConstBits TestConstBits.cc)
add_executable(TestPointIds TestPointIds.cc)
add_executable(TestVec TestVec.cc)
add_executable(TestGridEnum TestGridEnum.cc)
add_executable(TestreadMesh TestreadMesh.cc)
add_executable(TestPathBits TestPathBits.cc)
add_executable(TestHyperCube TestHyperCube.cc)
add_executable(TestNbh TestNbh.cc)
add_executable(TestMeshInfo TestMeshInfo.cc)
add_executable(TestAmrLevels TestAmrLevels.cc)
add_executable(TestAmrTree TestAmrTree.cc)
add_executable(TestAmrConnect TestAmrConnect.cc)
add_executable(TestAmrSidePoints TestAmrSidePoints.cc)
