add_executable(TestConstBits TestConstBits.cc)
add_executable(TestPointIds TestPointIds.cc)
add_executable(TestVec TestVec.cc)
add_executable(TestGridEnum TestGridEnum.cc)
add_executable(TestPathBits TestPathBits.cc)
add_executable(TestHyperCube TestHyperCube.cc)
add_executable(TestNbh TestNbh.cc)
add_executable(TestTreeLevelStorage TestTreeLevelStorage.cc)
add_executable(TestHyperCubeTree TestHyperCubeTree.cc)
add_executable(TestCSG TestCSG.cc)
add_executable(TestTreeCSGRefine TestTreeCSGRefine.cc)
add_executable(TestTreeCSGValues TestTreeCSGValues.cc)
